# Blockchain

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: Main.yml
doc/img/: system_init_diagram.drawio
rust/: main.rs  mod.rs
rust/blockchain/: block.rs  chain.rs  digest.rs  miner.rs  mod.rs  system.rs  system_persistence.rs  transaction.rs  wallet.rs
rust/blockchain/test/: block_test.rs  chain_test.rs  digest_test.rs  main_test.rs  miner_test.rs  mod.rs  system_test.rs  transaction_test.rs  wallet_test.rs
